Scrollbar fix
git-svn-id: svn://gallium.openminds.be/opt/svn/fork2/trunk@2126 869247f0-a1f3-4d5c-9449-4b73fc252fa6

--- a/default_www/backend/core/layout/css/imports/structure.css
+++ b/default_www/backend/core/layout/css/imports/structure.css
@@ -38,7 +38,7 @@ body {
 
 #main {
 	border-top: none;
-	min-width: 960px;
+	min-width: 958px;
 	max-width: 1224px;
 	margin: 0 auto;
 	background: #FAFAFA;
